--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.mail.host=smtp.office365.com
-spring.mail.port=587
+spring.mail.port=***
 spring.mail.username=************
 spring.mail.password=************
 spring.mail.properties.mail.smtp.auth=true
